Updated build script, work thumb styles and blog page setup

--- a/assets/sass/_1200up.scss
+++ b/assets/sass/_1200up.scss
@@ -18,9 +18,15 @@ Header
 }
 
 /*--------------------------------------------------------------
+Footer
+--------------------------------------------------------------*/
+.info-block {
+	padding-right: 60px;
+}
+
+/*--------------------------------------------------------------
 Home Page
 --------------------------------------------------------------*/
-
 /* Hero */
 .hero-section {
 	min-height: 500px;
@@ -43,8 +49,8 @@ Home Page
 }
 
 /*--------------------------------------------------------------
-Footer
+Work Page
 --------------------------------------------------------------*/
-.info-block {
-	padding-right: 60px;
+.work-thumb {
+	height: 300px;
 }
