--- a/assets/sass/_600up.scss
+++ b/assets/sass/_600up.scss
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
->>> _561up.scss
+>>> _600up.scss
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
@@ -20,17 +20,28 @@ Header
 }
 
 /*--------------------------------------------------------------
+Blog
+--------------------------------------------------------------*/
+.blog {
+	article {
+		float: left;
+		width: 50%;
+		&:nth-of-type(odd) {
+			clear: left;
+		}
+	}
+}
+
+/*--------------------------------------------------------------
 Work Page
 --------------------------------------------------------------*/
-.work-detail {
-	.content {
-		h4 {
-			font-size: 32px;
-			font-size: 3.2rem;
-		}
-		.cats {
-			font-size: 16px;
-			font-size: 1.6rem;
-		}
+.work-thumb_info {
+	h4 {
+		font-size: 32px;
+		font-size: 3.2rem;
+	}
+	.cats {
+		font-size: 16px;
+		font-size: 1.6rem;
 	}
 }
