--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,6 +10,7 @@ Bootstrap
 /*--------------------------------------------------------------
 Base
 --------------------------------------------------------------*/
+@import "_variables";
 @import "_mixins";
 @import "_base";
 
@@ -25,8 +26,8 @@ Media Queries
 @media only screen {
 	@import "_mobile";
 }
-@media only screen and (min-width: 561px) {
-	@import "_561up";
+@media only screen and (min-width: 600px) {
+	@import "_600up";
 }
 @media only screen and (min-width: 768px) {
 	@import "_768up";
@@ -36,11 +37,4 @@ Media Queries
 }
 @media only screen and (min-width: 1200px) {
 	@import "_1200up";
-}
-
-/* Retina */
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-       only screen and (min--moz-device-pixel-ratio: 1.5),
-       only screen and (min-device-pixel-ratio: 1.5) {
-	@import "_retina";
 }
