--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -3,6 +3,14 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
+Global
+--------------------------------------------------------------*/
+/* Image Areas */
+.feat-img-area {
+	height: 450px;
+}
+
+/*--------------------------------------------------------------
 Header
 --------------------------------------------------------------*/
 .site-header {
@@ -44,77 +52,6 @@ Header
 }
 
 /*--------------------------------------------------------------
-Global
---------------------------------------------------------------*/
-/* Image Areas */
-.feat-img-area {
-	height: 450px;
-}
-
-/*--------------------------------------------------------------
-Home Page
---------------------------------------------------------------*/
-.section {
-	padding: 64px 0;
-}
-
-/* Slides */
-.slide-area_text {
-	h1 {
-		font-size: 20px;
-		font-size: 2.0rem;
-	}
-	h2 {
-		font-size: 84px;
-		font-size: 8.4rem;
-	}
-}
-
-/*--------------------------------------------------------------
-Work Page
---------------------------------------------------------------*/
-.work-detail {
-	.content {
-		h4 {
-			font-size: 24px;
-			font-size: 2.4rem;
-		}
-		.cats {
-			font-size: 14px;
-			font-size: 1.4rem;
-		}
-	}
-}
-
-/*--------------------------------------------------------------
-Work Single
---------------------------------------------------------------*/
-.single-work_item {
-	.entry-content {
-		margin-top: 0;
-	}
-	.work-image {
-		margin-bottom: 1.5em;
-	}
-}
-.sub-header {
-	overflow: hidden;
-	h2 {
-		float: left;
-	}
-}
-.work-nav_top {
-	float: right;
-}
-
-/*--------------------------------------------------------------
-Contact Page
---------------------------------------------------------------*/
-.contact-form {
-	margin-bottom: 0;
-}
-
-/*--------------------------------------------------------------
 Footer
 --------------------------------------------------------------*/
 .site-footer {
@@ -153,4 +90,86 @@ Footer
 .footer-sep,
 .footer-icons {
 	display: none;
+}
+
+/*--------------------------------------------------------------
+Blog
+--------------------------------------------------------------*/
+.blog {
+	.site-content {
+		padding-top: 4.0em;
+	}
+	article {
+		width: 33.333%;
+		&:nth-of-type(odd) {
+			clear: none;
+		}
+		&:nth-of-type(3n+4) {
+			clear: left;
+		}
+	}
+}
+
+/*--------------------------------------------------------------
+Home Page
+--------------------------------------------------------------*/
+.section {
+	padding: 64px 0;
+}
+
+/* Slides */
+.slide-area_text {
+	h1 {
+		font-size: 20px;
+		font-size: 2.0rem;
+	}
+	h2 {
+		font-size: 84px;
+		font-size: 8.4rem;
+	}
+}
+
+/*--------------------------------------------------------------
+Work Page
+--------------------------------------------------------------*/
+.work-thumb {
+	height: 275px;
+}
+.work-thumb_info {
+	h4 {
+		font-size: 24px;
+		font-size: 2.4rem;
+	}
+	.cats {
+		font-size: 14px;
+		font-size: 1.4rem;
+	}
+}
+
+/*--------------------------------------------------------------
+Work Single
+--------------------------------------------------------------*/
+.single-work_item {
+	.entry-content {
+		margin-top: 0;
+	}
+	.work-image {
+		margin-bottom: 1.5em;
+	}
+}
+.sub-header {
+	overflow: hidden;
+	h2 {
+		float: left;
+	}
+}
+.work-nav_top {
+	float: right;
+}
+
+/*--------------------------------------------------------------
+Contact Page
+--------------------------------------------------------------*/
+.contact-form {
+	margin-bottom: 0;
 }
