--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -2,76 +2,28 @@
 >>> _mixins.scss
 --------------------------------------------------------------*/
 
-/*--------------------------------------------------------------
-Variables
---------------------------------------------------------------*/
-/* Fonts */
-$sans-serif: 'Open Sans', sans-serif;
-$sans-alt: 'Lato', sans-serif;
-$serif: Georgia, Palatino, serif;
-
-/* Colors */
-$blue: #80A1B6;
-$brown: #9A857A;
-$charcoal: #505050;
-$gray-light: #E3E3E3;
-
-/*--------------------------------------------------------------
-Definitions
---------------------------------------------------------------*/
-/* Fonts */
-$body-font: $sans-serif;
-$fancy-font: $serif;
-$heading-font: $sans-alt;
-
-/* Colors */
-$accent-color: darken($brown, 5%);
-$accent-dark: lighten($accent-color, 25%);
-$body-color: $charcoal;
-$body-light: lighten($body-color, 20%);
-$border-color: lighten($gray-light, 5%);
-$border-dark: darken($border-color, 5%);
-$link-color: $blue;
-$nav-bg: darken($link-color, 10%);
-$pill-color: lighten($body-light, 20%);
-$placeholder-text: darken($border-dark, 12.5%);
-$section-bg: lighten($border-color, 4%);
-
-/* Social */
-$gplus: #D4452A;
-$facebook: #3C599B;
-$linkedin: #0077B5;
-$pinterest: #BD081C;
-$twitter: #5EA9DD;
-
-/*--------------------------------------------------------------
-Effects
---------------------------------------------------------------*/
 /* Transitions */
 @mixin animated($time: .25s) {
-	-webkit-transition: all $time linear;
-	-moz-transition: all $time linear;
-	-o-transition: all $time linear;
 	transition: all $time linear;
 }
 @mixin image_lighten($opacity: 0.75) {
 	&:hover {
+		position: relative;
 		opacity: $opacity;
+		// Chrome image move fix:
+		// hat-tip: http://goo.gl/Emko4u
+		-webkit-backface-visibility: hidden;
 		@include animated;
 	}
 }
 
 /* Gradient */
 @mixin ecm_gradient($top, $bottom) {
-	background: -webkit-linear-gradient($top, $bottom);
-	background: -moz-linear-gradient($top, $bottom);
-	background: -o-linear-gradient($top, $bottom);
 	background: linear-gradient($top, $bottom);
 }
 
 /* Shadows */
 @mixin drop_shadow($color) {
-	-webkit-box-shadow: 0 8px 10px -6px $color;
 	box-shadow: 0 8px 10px -6px $color;
 }
 
@@ -92,17 +44,11 @@ Effects
 
 /* Positioning */
 @mixin flip_horiz {
-	-moz-transform: scaleX(-1);
-	-o-transform: scaleX(-1);
-	-webkit-transform: scaleX(-1);
 	transform: scaleX(-1);
 	filter: FlipH;
 	-ms-filter: "FlipH";
 }
 @mixin vert_align {
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	top: 50%;
 }
