--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -95,10 +95,12 @@ Footer
 /*--------------------------------------------------------------
 Blog
 --------------------------------------------------------------*/
-.blog {
+.blog, .single-post {
 	.site-content {
 		padding-top: 4.0em;
 	}
+}
+.blog {
 	article {
 		width: 33.333%;
 		&:nth-of-type(odd) {
