--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -129,6 +129,7 @@ Home Page
 		color: $border-dark;
 		font-size: 28px;
 		font-size: 2.8rem;
+		@include grab-attention(6);
 		&:active,
 		&:focus {
 			color: white;
