Moved breakpoint stylesheets

--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -3,8 +3,8 @@
 --------------------------------------------------------------*/
 
 /* Transitions */
-@mixin animated($time: .25s) {
-	transition: all $time ease-in-out;
+@mixin animated($type: all, $time: .25s) {
+	transition: $type $time ease-in-out;
 }
 @mixin image_lighten($opacity: 0.75) {
 	&:hover {
