--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2674,10 +2674,11 @@ Header
     margin: 0 auto;
     max-width: 100px;
     height: auto;
-    opacity: 0.75; }
+    opacity: 0.75;
+    transition: opacity 0.25s ease-in-out; }
     .site-header .site-logo:hover {
       opacity: 1;
-      transition: all 0.25s ease-in-out; }
+      transition: opacity 0.4s ease-in-out; }
 
   .site-branding, .main-navigation {
     display: block;
@@ -3272,6 +3273,41 @@ Web Services
       margin-bottom: 1em; }
     .feature-list p {
       color: #838383; }
+ }
+
+@media only screen and (min-width: 481px) {
+  /*--------------------------------------------------------------
+>>> _600up.scss
+--------------------------------------------------------------*/
+  /*--------------------------------------------------------------
+Header
+--------------------------------------------------------------*/
+  /* Navigation */
+  .main-navigation li {
+    padding: 0 0.5em; }
+
+  /* Slides */
+  .slide-area_text h2 {
+    max-width: 60%; }
+
+  /*--------------------------------------------------------------
+Blog
+--------------------------------------------------------------*/
+  .blog article {
+    float: left;
+    width: 50%; }
+    .blog article:nth-of-type(odd) {
+      clear: left; }
+
+  /*--------------------------------------------------------------
+Work Page
+--------------------------------------------------------------*/
+  .work-thumb_info h4 {
+    font-size: 32px;
+    font-size: 3.2rem; }
+  .work-thumb_info .cats {
+    font-size: 16px;
+    font-size: 1.6rem; }
  }
 
 @media only screen and (min-width: 600px) {
