--- a/assets/sass/breakpoints/_992up.scss
+++ b/assets/sass/breakpoints/_992up.scss
@@ -95,7 +95,7 @@ Footer
 /*--------------------------------------------------------------
 Blog
 --------------------------------------------------------------*/
-.blog, .single-post {
+.single-post {
 	.site-content {
 		padding-top: 4.0em;
 	}
