--- a/assets/sass/breakpoints/_768up.scss
+++ b/assets/sass/breakpoints/_768up.scss
@@ -78,7 +78,12 @@ Header
 /*--------------------------------------------------------------
 Blog
 --------------------------------------------------------------*/
-.blog, .single-post {
+.blog {
+	.site-content {
+		padding: 0 0 2.0em;
+	}
+}
+.single-post {
 	.site-content {
 		padding: 3.0em 0 2.0em;
 	}
